--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,18 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  background-image: url(../src/assets/dance1.png);
+    background-size: cover;
+      /* Adjust the size of the background */
+      background-position:left;
+      /* Center the image */
+      height: 100vh;
+      /* Set the height to the full viewport height */
+      width: 220%;
+
 }
+
+
 
 .logo {
   height: 6em;
